# ai00-x-doc

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: deploy-pages.yml
Ai00XDocs/: pyproject.toml
Ai00XDocs/src/ai00xdocs/: __init__.py
docs/: game_design_document.md  index.md
docs-vp/: README.md
docs-vp/.vuepress/: config.ts
docs-vp/.vuepress/stubs/: plugin-git-client-stub.js  plugin-git-clientConfig-stub.js  plugin-git-index.js
docs-vp/blog/: README.md
docs-vp/gdd/: 00_overview.md  01_core_concept.md  02_roles_ai_traits.md  03_core_gameplay.md  04_ai_interaction_system.md  05_tech_architecture.md  06_ui_ux.md  07_business_model.md  08_timeline_milestones.md  README.md  appendix.md
docs-vp/reference/: deployment.md  major_changes.md  notes_origin_mission.md  social_ge.md
docs/reference/: notes_origin_mission.md  social_ge.md
reference/: README.md  deployment.md  major_changes.md  wiki_setup.md
